# Guitar

./: README.md  controlframeandbuttons.py  import.py  importmusic.py  local.properties  main.cpp  main.kt  main.py  mainclassandintializetkinterroot.py  playlistframeandlistbox.py  progressbar&elapsedtime&initializevariable  settings.gradle.kts  statuslabelandvolumecontrollabel
Audio/: audioinput.cpp  audioinputparameters.cpp  audiooutputparameters.cpp  audioprocessing.cpp  setaudioinput.cpp  setaudioparameters.cpp  setaudioprocessing.cpp  startaudioinput.cpp
Panning/: pan.cpp
Preset Manager/: presetmanager.cpp
Presets & Android/: android.h  preset#2.cpp
Tone, Jni & Android/: jni.cpp
app/: build.gradle.kts
app/src/androidTest/java/com/loading/drive/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/loading/guitar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  atomsphere.cpp  beat-detection.cpp  native-lib.cpp
app/src/main/cpp/Atomsphere, Android & Jni/: android.cpp  android.h  atomsphere.cpp  atomsphere.h  jni.h
app/src/main/cpp/Beat Detection/: beat-detection.cpp  beatdetectionparameters.cpp
app/src/main/cpp/Beat Detection/Log/: log.cpp  log.h
app/src/main/cpp/Create Presets/: createpreset.cpp  createpreset.h
app/src/main/cpp/Instrument Effects/: InstrumentEffects.cpp  xylphone.cpp
app/src/main/cpp/Mini Visualizer/: spectrumanalyzerwithbars.cpp  stereoleduvmeter.cpp  waveformanalyzer.cpp
app/src/main/cpp/Presets & Android/: android.cpp  preset#10.cpp  preset#11.cpp  preset#13.cpp  preset#14.cpp  preset#15.cpp  preset#3.cpp  preset#4.cpp  preset#5.cpp  preset#6.cpp  preset#7.cpp  preset#8.cpp  preset#9.cpp  preset.cpp  preset10.cpp  preset11.cpp  preset12.cpp  preset14.cpp  preset15.cpp  preset2.cpp  preset3.cpp  preset4.cpp  preset5.cpp  preset6.cpp  preset7.cpp  preset8.cpp  preset9.cpp
app/src/main/cpp/Tone, Jni & Android/: android.cpp  basstreble.cpp  midrange.cpp
app/src/main/java/com/loading/drive/: MainActivity.kt
app/src/main/java/com/loading/guitar/: Albums.java  AppMenu.kt  Artists.java  Composers.java  Folders.java  Genres.java  MainActivity.kt  MostReplayed.java  Playlists.java  Starred.java  Tabs.kt  Tracks.java  Years.java
app/src/main/res/layout/: fragment_albums.xml  fragment_artists.xml  fragment_composers.xml  fragment_folders.xml  fragment_genres.xml  fragment_most_replayed.xml  fragment_playlists.xml  fragment_starred.xml  fragment_tracks.xml  fragment_years.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
